--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@angular-devkit/core": "~20.3.0",
+    "@nx/angular": "22.0.0",
     "@nx/js": "22.0.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -17,5 +18,6 @@
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {}
 }
