--- a/package.json
+++ b/package.json
@@ -40,13 +40,17 @@
     "eslint-plugin-playwright": "^1.6.2",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "~20.3.0",
     "nx": "22.0.0",
     "postcss": "^8.4.5",
+    "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.2",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.40.0",
+    "verdaccio": "^6.0.5",
     "vite": "^7.0.0",
     "vitest": "^3.0.0"
   },
@@ -62,5 +66,8 @@
     "@angular/router": "~20.3.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
