chore: update TypeScript compiler options and add implicit dependency to angular-app

--- a/apps/angular-app/project.json
+++ b/apps/angular-app/project.json
@@ -5,6 +5,7 @@
   "prefix": "app",
   "sourceRoot": "apps/angular-app/src",
   "tags": [],
+  "implicitDependencies": ["tailwind-component-test"],
   "targets": {
     "build": {
       "executor": "@angular/build:application",
