--- a/apps/angular-app/tsconfig.app.json
+++ b/apps/angular-app/tsconfig.app.json
@@ -2,7 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "types": []
+    "types": [],
+    "emitDeclarationOnly": false,
+    "composite": false
   },
   "include": ["src/**/*.ts"],
   "exclude": [
