--- a/apps/angular-app/tsconfig.json
+++ b/apps/angular-app/tsconfig.json
@@ -4,8 +4,7 @@
     "noPropertyAccessFromIndexSignature": true,
     "experimentalDecorators": true,
     "moduleResolution": "bundler",
-    "module": "preserve",
-    "emitDeclarationOnly": false
+    "module": "preserve"
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
