--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@tailwindcss/postcss": "^4.1.15",
+    "@tailwindcss/vite": "^4.0.0",
     "@types/node": "20.19.9",
     "@typescript-eslint/utils": "^8.40.0",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
     "angular-eslint": "^20.3.0",
-    "autoprefixer": "^10.4.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-playwright": "^1.6.2",
@@ -43,10 +44,10 @@
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "~20.3.0",
     "nx": "22.0.0",
-    "postcss": "^8.4.5",
-    "postcss-url": "~10.1.3",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.2.0",
     "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.2",
+    "tailwindcss": "^4.1.15",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.40.0",
